spacing between comments fix

--- a/Client/src/components/Styles/Post.scss
+++ b/Client/src/components/Styles/Post.scss
@@ -1,5 +1,5 @@
 .post {
-  margin: 20px 140px;
+  margin: 40px 140px;
   overflow: auto;
   border-radius: 25px;
   //Changed
